OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/Account_Vendor_Program_Onboarding__c.object-meta.xml
<CustomObject>
    <description>Junction object linking an Account (Dealer, Infrastructure Supplier, etc.) to a Vendor Program Onboarding engagement; supports repeat enrollments with optional Opportunity linkage.</description>
    <label>Account Vendor Program Onboarding</label>
    <nameField>
        <displayFormat>AVO-{000000}</displayFormat>
        <label>Account Vendor Program Onboarding</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Vendor Program Onboardings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>