OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account participating in the vendor program onboarding engagement.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Vendor Program Onboardings</relationshipLabel>
    <relationshipName>Account_Vendor_Program_Onboardings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>