OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Engagement_Start__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start__c</fullName>
    <description>Date the onboarding engagement started.</description>
    <label>Engagement Start</label>
    <type>Date</type>
</CustomField>