OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Go_Live_Actual__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Actual__c</fullName>
    <description>Actual go-live date for this onboarding engagement.</description>
    <label>Actual Go-Live</label>
    <type>Date</type>
</CustomField>