OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Go_Live_Target__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Target__c</fullName>
    <description>Target go-live date for this onboarding engagement.</description>
    <label>Target Go-Live</label>
    <type>Date</type>
</CustomField>