OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates the engagement is currently active/in-flight.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>