OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <description>Vendor Program Onboarding record this account engagement relates to.</description>
    <label>Vendor Program Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Account Vendor Program Onboardings</relationshipLabel>
    <relationshipName>Account_Vendor_Onboarding_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>