OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity representing this onboarding engagement/sales motion.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Vendor Program Onboardings</relationshipLabel>
    <relationshipName>Account_Vendor_Program_Onboarding_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>