OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designated primary contact for this onboarding engagement.</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboarding Engagements</relationshipLabel>
    <relationshipName>Onboarding_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>