OnboardingV2Minimal/force-app/main/default/objects/Account_Vendor_Program_Onboarding__c/fields/Reason_for_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Return__c</fullName>
    <description>Context when this account re-engages for the same vendor program.</description>
    <label>Reason for Return</label>
    <type>TextArea</type>
</CustomField>